fix(sonar): fix MAJOR code smells — toList, unused methods, shadowing, specific exceptions